# PurrfectBytes

./: .gitignore  CLAUDE.md  README.md  README_MODULAR.md  demo_concatenation.py  main.py  pyproject.toml
PurrfectBytesAndroid/: build.gradle.kts  check_braces.py  gradle.properties  gradlew  local.properties  settings.gradle.kts
PurrfectBytesAndroid/app/: build.gradle.kts
PurrfectBytesWeb/: FONTS.md  README.md  app.py  concatenate.py  convert.py  main.py  package-lock.json  pyproject.toml
PurrfectBytesWeb/src/api/: conversion_routes.py  file_routes.py  language_routes.py  repetition_routes.py  routes.py  system_routes.py  youtube_routes.py
PurrfectBytesWeb/src/config/: settings.py
PurrfectBytesWeb/src/models/: schemas.py
PurrfectBytesWeb/src/services/: tts_engines.py  tts_service.py  video_generation.py  youtube_metadata_service.py  youtube_upload_service.py
PurrfectBytesWeb/src/utils/: exceptions.py  font_utils.py
PurrfectBytesWeb/static/css/: style.css
PurrfectBytesWeb/static/js/: app.js
PurrfectBytesWeb/templates/: index.html
PurrfectBytesWeb/tests/unit/services/: test_video_service.py
PurrfectBytesWeb/tests/unit/utils/: test_font_utils.py
PurrfectBytes_Android/: README.md
PurrfectBytes_Android/app/: build.gradle.kts
PurrfectBytes_Web/: app.py  example1.py  main.py
PurrfectBytes_Web/tests/: conftest.py
PurrfectBytes_iOS/: README.md
PurrfectBytes_iOS/PurrfectBytes.xcodeproj/: project.pbxproj
PurrfectBytesiOS/PurrfectBytes/: PurrfectBytesApp.swift
purrfect_bytes_mobile/: README.md
src/api/: routes.py
templates/: index.html
(+51 files in other folders)
